gccida/g1/push_range_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/c-typeck.c:6165:12: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
v1->prev = constructor_range_stack_0; 
           ^~~~~~~~~~~~~~~~~~~~~~~~~
           constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/c-typeck.c:6171:13: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v1->stack = constructor_stack_0; 
            ^~~~~~~~~~~~~~~~~~~
            constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/c-typeck.c:6173:6: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( constructor_range_stack_0 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/c-typeck.c:6174:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0->next = v1; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/c-typeck.c:6175:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = v1; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_range_stack/src/obj/c-typeck.o] Error 1
